modal font and page2

--- a/page2.html
+++ b/page2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="myproject4.css">
+  <link rel="stylesheet" href="bootstrappractice.css">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +9,7 @@
 </head>
 <body class="project4page2">
    <a  href = "myproject4.html" class="closebtn">X</a>
-    <h1 class="about-heading1">Helloo Welcome to my web info page</h1>
+    <h1 class="about-heading1">Hello Welcome to my web info page</h1>
     <h1 class="about-heading2"></h1>
     <div class="demo1">
     <p>
@@ -23,6 +23,6 @@
   <div class="demo2"></div>
   
 
-  <script src="myproject4.js"></script>
+  <script src="bootstrappractice.js"></script>
 </body>
 </html>
