--- a/index.html
+++ b/index.html
@@ -740,7 +740,7 @@
       <button type="button" class="btn mt-2 mt-md-0 btn-sm  btn-outline-secondary text-black mb-3" data-toggle="modal" data-target="#modal1">Wanna buy a book</button>
       <div class="modal" id="modal1">
         <div class="modal-dialog">
-          <div class="modal-content bg-primary">
+          <div class="modal-content bg-primary ml-n2">
             <div class="modal-header">
               <div class="h2 text-center text-white">Welcome</div>
               <button type="button" class="close" data-dismiss="modal">&times;</button>
