--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
                        <div class="modal fade modal-link3" id="modal-link1">
                         <div class="modal-dialog">
-                          <div class="modal-content bg-dark">
+                          <div class="modal-content ml-n2 bg-dark">
                             <div class="modal-header">
                               <div class="h2">
                                    <img src="images/josh4icon.png" class="image-fluid modal-books pl-2"> About First 20 Hours</div>
@@ -141,7 +141,7 @@
                        <!--Modal-2-->
                        <div class="modal fade" id="modal-link2">
                         <div class="modal-dialog">
-                          <div class="modal-content bg-dark">
+                          <div class="modal-content ml-n2 bg-dark">
                             <div class="modal-header">
                               <div class="h2">
                                    <img src="images/jk2icon.jpeg" class="image-fluid modal-books pl-2"> About Harry Potter</div>
@@ -214,7 +214,7 @@
                      
                        <div class="modal fade modal-link2" id="modal-link3">
                         <div class="modal-dialog">
-                          <div class="modal-content bg-dark">
+                          <div class="modal-content ml-n2 bg-dark">
                             <div class="modal-header">
                               <div class="h2">
                                    <img src="images/mj4icon.jpg" class="image-fluid modal-books pl-2"> About Fastlane Millionaire</div>
@@ -291,7 +291,7 @@
                       <!-- Sign in modal-->
                       <div class="modal fade" id="signinmodal">
                         <div class="modal-dialog">
-                          <div class="modal-content bg-info">
+                          <div class="modal-content ml-n2 bg-info">
                             <div class="modal-header">
                               <div class="h1 text-dark">Sign In</div>
                               <button type="button" class="close" data-dismiss="modal">&times;</button>
