--- a/page2.html
+++ b/page2.html
@@ -8,7 +8,7 @@
   <title>Practice</title>
 </head>
 <body class="project4page2">
-   <a  href = "myproject4.html" class="closebtn">X</a>
+   <a  href = "https://programmerowais.github.io/millionaire-authors.github.io/" class="closebtn">X</a>
     <h1 class="about-heading1">Hello Welcome to my web info page</h1>
     <h1 class="about-heading2"></h1>
     <div class="demo1">
