--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>Millionaire Authors</title>
 </head>
 <body class="bg-light">
-    <header>
+    <header class="w-100">
         <div class="container-fluid bg-dark text-white d-flex">
             <div class="col-1 col-md-2 mt-3">
                 <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-book mb-2" viewBox="0 0 16 16">
@@ -368,7 +368,7 @@
                 <div class="h1 p-0 mt-3 mt-sm-1">JK Rowling</div>
                 <div class="h3 font-weight-lighter mb-2">British Authors</div>
                   <p class="mb-0 para2">
-                    K Rowling was born in the United Kingdom on July 31 1965.
+                    JK Rowling was born in the United Kingdom on July 31 1965.
                     Her real name is Joanne Rowling but changed it to JK Rowling
                     to write the Harry Potter book series so that boys might like
                     it too. If boys thought the author was a girl then they might
